# IceblurEngine

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  README.md  Setup.bat
Engine/Binaries/Win64/Debug/Runtime/: IceblurEngine.exp
Engine/Shaders/: LitFragmentShader.glsl  LitVertexShader.glsl  UnlitFragmentShader.glsl  UnlitVertexShader.glsl
Engine/Source/Editor/: Application.cpp  CMakeLists.txt  EditorApp.cpp  EditorCamera.cpp  EditorCamera.h
Engine/Source/Runtime/: CMakeLists.txt  Test.cpp  Test.h
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Core.h  CoreMinimal.h  CoreUtils.h  HostEntry.h  Identifiable.h  InputManager.cpp  InputManager.h  VTime.cpp  VTime.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Engine/Source/Runtime/Core/Error/: ErrorList.cpp  ErrorList.h
Engine/Source/Runtime/Core/IO/: IoManager.cpp  IoManager.h  Log.cpp  Log.h  VIO.cpp  VIO.h
Engine/Source/Runtime/Event/: EventSystem.cpp  EventSystem.h  EventTypes.h  IEvent.h
Engine/Source/Runtime/Math/: VMath.cpp  VMath.h
Engine/Source/Runtime/Platform/: PlatformDetection.h
Engine/Source/Runtime/Platform/Windows/: Win64Window.cpp  Win64Window.h
Engine/Source/Runtime/Renderer/: Renderer.cpp  Renderer.h  RenderingPipeline.cpp  RenderingPipeline.h  Shader.cpp  Shader.h
Engine/Source/Runtime/Renderer/Intern/: OpenGLData.cpp  OpenGLData.h  Texture.cpp  Texture.h
Engine/Source/Runtime/Scene/: Component.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Source/Runtime/Scene/Components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  SpectatorCameraComponent.cpp  SpectatorCameraComponent.h  TransformComponent.h
